--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -6,6 +6,7 @@ $font-size-small: 85%;
 $color-base: #9EC7F3; /* hsl(211, 78%, 79%) */
 
 $color-background-page:           #E6EAEF;
+$color-background-container:      #FFFFFF;
 $color-border-page:               #D7E2ED;
 
 $color-background-table:          hsl(240,  20%,  99%);
@@ -19,6 +20,7 @@ $color-background-menu-secondary: #0F478C;
 
 $color-text-primary:              hsl(210,  20%,  16%);
 $color-text-secondary:            hsl(210,  20%,  40%);
+$color-text-tertiary:             hsl(210,  20%,  70%);
 $color-text-link:                 #1E90FF;
 $color-text-link-hover:           #E47911;
 $color-text-disabled:             hsl(210,  20%,  70%);
